# cv_object_detector

./: .gitignore  CMakeLists.txt  Readme  Report.odt  main.cpp
include/: detection.hpp  evaluate.hpp
output/detections/: 35_0077_000519-color.txt  4_0001_000121-color.txt  4_0001_000956-color.txt  4_0001_000956-sugar_box-box.txt  4_0014_001409-color.txt  4_0025_000065-color.txt  4_0049_000003-color.txt  4_0054_000215-color.txt  4_0058_000001-color.txt  4_0058_000001-sugar_box-box.txt  4_0058_001715-color.txt  4_0077_000659-color.txt
src/: detection.cpp  evaluate.cpp  synthetic_test.cpp
